--- a/styles/style.css
+++ b/styles/style.css
@@ -110,3 +110,12 @@ body {
   max-width: calc(var(--container-width) + (var(--container-padding-x) * 2));
   margin-inline: auto;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+
+}
+::-webkit-scrollbar-thumb {
+  background: var(--color-accent);
+  border-radius: 6px;
+}
